main/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> pddl
Rule 1     pddl -> domain
Rule 2     pddl -> problem
Rule 3     domain -> LPAREN DEFINE_KEY domain_def require_def types_def predicates_def action_def_lst RPAREN
Rule 4     problem -> LPAREN DEFINE_KEY problem_def domain_def objects_def init_def goal_def RPAREN
Rule 5     domain_def -> LPAREN DOMAIN_KEY NAME RPAREN
Rule 6     problem_def -> LPAREN PROBLEM_KEY NAME RPAREN
Rule 7     objects_def -> LPAREN OBJECTS_KEY typed_constants_lst RPAREN
Rule 8     init_def -> LPAREN INIT_KEY LPAREN AND_KEY ground_predicates_lst RPAREN RPAREN
Rule 9     init_def -> LPAREN INIT_KEY ground_predicates_lst RPAREN
Rule 10    goal_def -> LPAREN GOAL_KEY LPAREN AND_KEY ground_predicates_lst RPAREN RPAREN
Rule 11    require_def -> LPAREN REQUIREMENTS_KEY require_key_lst RPAREN
Rule 12    require_key_lst -> require_key require_key_lst
Rule 13    require_key_lst -> require_key
Rule 14    require_key -> STRIPS_KEY
Rule 15    require_key -> EQUALITY_KEY
Rule 16    require_key -> TYPING_KEY
Rule 17    require_key -> PROBABILISTIC_EFFECTS_KEY
Rule 18    types_def -> LPAREN TYPES_KEY names_lst RPAREN
Rule 19    predicates_def -> LPAREN PREDICATES_KEY predicate_def_lst RPAREN
Rule 20    predicate_def_lst -> predicate_def predicate_def_lst
Rule 21    predicate_def_lst -> predicate_def
Rule 22    predicate_def -> LPAREN NAME typed_variables_lst RPAREN
Rule 23    predicate_def -> LPAREN NAME RPAREN
Rule 24    action_def_lst -> action_def action_def_lst
Rule 25    action_def_lst -> action_def
Rule 26    action_def -> LPAREN ACTION_KEY NAME parameters_def action_def_body RPAREN
Rule 27    parameters_def -> PARAMETERS_KEY LPAREN typed_variables_lst RPAREN
Rule 28    parameters_def -> PARAMETERS_KEY LPAREN RPAREN
Rule 29    action_def_body -> precond_def effects_def
Rule 30    precond_def -> PRECONDITION_KEY LPAREN AND_KEY literals_lst RPAREN
Rule 31    precond_def -> PRECONDITION_KEY literal
Rule 32    effects_def -> EFFECT_KEY LPAREN AND_KEY effects_lst RPAREN
Rule 33    effects_def -> EFFECT_KEY effect
Rule 34    effects_lst -> effect effects_lst
Rule 35    effects_lst -> effect
Rule 36    effect -> literal
Rule 37    effect -> LPAREN PROBABILISTIC_KEY PROBABILITY literal RPAREN
Rule 38    literals_lst -> literal literals_lst
Rule 39    literals_lst -> literal
Rule 40    literal -> LPAREN NOT_KEY predicate RPAREN
Rule 41    literal -> predicate
Rule 42    ground_predicates_lst -> ground_predicate ground_predicates_lst
Rule 43    ground_predicates_lst -> ground_predicate
Rule 44    predicate -> LPAREN NAME variables_lst RPAREN
Rule 45    predicate -> LPAREN EQUALS VARIABLE VARIABLE RPAREN
Rule 46    predicate -> LPAREN NAME RPAREN
Rule 47    ground_predicate -> LPAREN NAME constants_lst RPAREN
Rule 48    ground_predicate -> LPAREN NAME RPAREN
Rule 49    typed_constants_lst -> constants_lst HYPHEN type typed_constants_lst
Rule 50    typed_constants_lst -> constants_lst HYPHEN type
Rule 51    typed_variables_lst -> variables_lst HYPHEN type typed_variables_lst
Rule 52    typed_variables_lst -> variables_lst HYPHEN type
Rule 53    constants_lst -> constant constants_lst
Rule 54    constants_lst -> constant
Rule 55    variables_lst -> VARIABLE variables_lst
Rule 56    variables_lst -> VARIABLE
Rule 57    names_lst -> NAME names_lst
Rule 58    names_lst -> NAME
Rule 59    type -> NAME
Rule 60    constant -> NAME

Terminals, with rules where they appear

ACTION_KEY           : 26
AND_KEY              : 8 10 30 32
DEFINE_KEY           : 3 4
DOMAIN_KEY           : 5
EFFECT_KEY           : 32 33
EQUALITY_KEY         : 15
EQUALS               : 45
GOAL_KEY             : 10
HYPHEN               : 49 50 51 52
INIT_KEY             : 8 9
LPAREN               : 3 4 5 6 7 8 8 9 10 10 11 18 19 22 23 26 27 28 30 32 37 40 44 45 46 47 48
NAME                 : 5 6 22 23 26 44 46 47 48 57 58 59 60
NOT_KEY              : 40
OBJECTS_KEY          : 7
PARAMETERS_KEY       : 27 28
PRECONDITION_KEY     : 30 31
PREDICATES_KEY       : 19
PROBABILISTIC_EFFECTS_KEY : 17
PROBABILISTIC_KEY    : 37
PROBABILITY          : 37
PROBLEM_KEY          : 6
REQUIREMENTS_KEY     : 11
RPAREN               : 3 4 5 6 7 8 8 9 10 10 11 18 19 22 23 26 27 28 30 32 37 40 44 45 46 47 48
STRIPS_KEY           : 14
TYPES_KEY            : 18
TYPING_KEY           : 16
VARIABLE             : 45 45 55 56
error                : 

Nonterminals, with rules where they appear

action_def           : 24 25
action_def_body      : 26
action_def_lst       : 3 24
constant             : 53 54
constants_lst        : 47 49 50 53
domain               : 1
domain_def           : 3 4
effect               : 33 34 35
effects_def          : 29
effects_lst          : 32 34
goal_def             : 4
ground_predicate     : 42 43
ground_predicates_lst : 8 9 10 42
init_def             : 4
literal              : 31 36 37 38 39
literals_lst         : 30 38
names_lst            : 18 57
objects_def          : 4
parameters_def       : 26
pddl                 : 0
precond_def          : 29
predicate            : 40 41
predicate_def        : 20 21
predicate_def_lst    : 19 20
predicates_def       : 3
problem              : 2
problem_def          : 4
require_def          : 3
require_key          : 12 13
require_key_lst      : 11 12
type                 : 49 50 51 52
typed_constants_lst  : 7 49
typed_variables_lst  : 22 27 51
types_def            : 3
variables_lst        : 44 51 52 55

Parsing method: LALR

state 0

    (0) S' -> . pddl
    (1) pddl -> . domain
    (2) pddl -> . problem
    (3) domain -> . LPAREN DEFINE_KEY domain_def require_def types_def predicates_def action_def_lst RPAREN
    (4) problem -> . LPAREN DEFINE_KEY problem_def domain_def objects_def init_def goal_def RPAREN

    LPAREN          shift and go to state 4

    pddl                           shift and go to state 1
    domain                         shift and go to state 2
    problem                        shift and go to state 3

state 1

    (0) S' -> pddl .



state 2

    (1) pddl -> domain .

    $end            reduce using rule 1 (pddl -> domain .)


state 3

    (2) pddl -> problem .

    $end            reduce using rule 2 (pddl -> problem .)


state 4

    (3) domain -> LPAREN . DEFINE_KEY domain_def require_def types_def predicates_def action_def_lst RPAREN
    (4) problem -> LPAREN . DEFINE_KEY problem_def domain_def objects_def init_def goal_def RPAREN

    DEFINE_KEY      shift and go to state 5


state 5

    (3) domain -> LPAREN DEFINE_KEY . domain_def require_def types_def predicates_def action_def_lst RPAREN
    (4) problem -> LPAREN DEFINE_KEY . problem_def domain_def objects_def init_def goal_def RPAREN
    (5) domain_def -> . LPAREN DOMAIN_KEY NAME RPAREN
    (6) problem_def -> . LPAREN PROBLEM_KEY NAME RPAREN

    LPAREN          shift and go to state 6

    domain_def                     shift and go to state 7
    problem_def                    shift and go to state 8

state 6

    (5) domain_def -> LPAREN . DOMAIN_KEY NAME RPAREN
    (6) problem_def -> LPAREN . PROBLEM_KEY NAME RPAREN

    DOMAIN_KEY      shift and go to state 9
    PROBLEM_KEY     shift and go to state 10


state 7

    (3) domain -> LPAREN DEFINE_KEY domain_def . require_def types_def predicates_def action_def_lst RPAREN
    (11) require_def -> . LPAREN REQUIREMENTS_KEY require_key_lst RPAREN

    LPAREN          shift and go to state 11

    require_def                    shift and go to state 12

state 8

    (4) problem -> LPAREN DEFINE_KEY problem_def . domain_def objects_def init_def goal_def RPAREN
    (5) domain_def -> . LPAREN DOMAIN_KEY NAME RPAREN

    LPAREN          shift and go to state 13

    domain_def                     shift and go to state 14

state 9

    (5) domain_def -> LPAREN DOMAIN_KEY . NAME RPAREN

    NAME            shift and go to state 15


state 10

    (6) problem_def -> LPAREN PROBLEM_KEY . NAME RPAREN

    NAME            shift and go to state 16


state 11

    (11) require_def -> LPAREN . REQUIREMENTS_KEY require_key_lst RPAREN

    REQUIREMENTS_KEY shift and go to state 17


state 12

    (3) domain -> LPAREN DEFINE_KEY domain_def require_def . types_def predicates_def action_def_lst RPAREN
    (18) types_def -> . LPAREN TYPES_KEY names_lst RPAREN

    LPAREN          shift and go to state 18

    types_def                      shift and go to state 19

state 13

    (5) domain_def -> LPAREN . DOMAIN_KEY NAME RPAREN

    DOMAIN_KEY      shift and go to state 9


state 14

    (4) problem -> LPAREN DEFINE_KEY problem_def domain_def . objects_def init_def goal_def RPAREN
    (7) objects_def -> . LPAREN OBJECTS_KEY typed_constants_lst RPAREN

    LPAREN          shift and go to state 20

    objects_def                    shift and go to state 21

state 15

    (5) domain_def -> LPAREN DOMAIN_KEY NAME . RPAREN

    RPAREN          shift and go to state 22


state 16

    (6) problem_def -> LPAREN PROBLEM_KEY NAME . RPAREN

    RPAREN          shift and go to state 23


state 17

    (11) require_def -> LPAREN REQUIREMENTS_KEY . require_key_lst RPAREN
    (12) require_key_lst -> . require_key require_key_lst
    (13) require_key_lst -> . require_key
    (14) require_key -> . STRIPS_KEY
    (15) require_key -> . EQUALITY_KEY
    (16) require_key -> . TYPING_KEY
    (17) require_key -> . PROBABILISTIC_EFFECTS_KEY

    STRIPS_KEY      shift and go to state 26
    EQUALITY_KEY    shift and go to state 27
    TYPING_KEY      shift and go to state 28
    PROBABILISTIC_EFFECTS_KEY shift and go to state 29

    require_key_lst                shift and go to state 24
    require_key                    shift and go to state 25

state 18

    (18) types_def -> LPAREN . TYPES_KEY names_lst RPAREN

    TYPES_KEY       shift and go to state 30


state 19

    (3) domain -> LPAREN DEFINE_KEY domain_def require_def types_def . predicates_def action_def_lst RPAREN
    (19) predicates_def -> . LPAREN PREDICATES_KEY predicate_def_lst RPAREN

    LPAREN          shift and go to state 31

    predicates_def                 shift and go to state 32

state 20

    (7) objects_def -> LPAREN . OBJECTS_KEY typed_constants_lst RPAREN

    OBJECTS_KEY     shift and go to state 33


state 21

    (4) problem -> LPAREN DEFINE_KEY problem_def domain_def objects_def . init_def goal_def RPAREN
    (8) init_def -> . LPAREN INIT_KEY LPAREN AND_KEY ground_predicates_lst RPAREN RPAREN
    (9) init_def -> . LPAREN INIT_KEY ground_predicates_lst RPAREN

    LPAREN          shift and go to state 34

    init_def                       shift and go to state 35

state 22

    (5) domain_def -> LPAREN DOMAIN_KEY NAME RPAREN .

    LPAREN          reduce using rule 5 (domain_def -> LPAREN DOMAIN_KEY NAME RPAREN .)


state 23

    (6) problem_def -> LPAREN PROBLEM_KEY NAME RPAREN .

    LPAREN          reduce using rule 6 (problem_def -> LPAREN PROBLEM_KEY NAME RPAREN .)


state 24

    (11) require_def -> LPAREN REQUIREMENTS_KEY require_key_lst . RPAREN

    RPAREN          shift and go to state 36


state 25

    (12) require_key_lst -> require_key . require_key_lst
    (13) require_key_lst -> require_key .
    (12) require_key_lst -> . require_key require_key_lst
    (13) require_key_lst -> . require_key
    (14) require_key -> . STRIPS_KEY
    (15) require_key -> . EQUALITY_KEY
    (16) require_key -> . TYPING_KEY
    (17) require_key -> . PROBABILISTIC_EFFECTS_KEY

    RPAREN          reduce using rule 13 (require_key_lst -> require_key .)
    STRIPS_KEY      shift and go to state 26
    EQUALITY_KEY    shift and go to state 27
    TYPING_KEY      shift and go to state 28
    PROBABILISTIC_EFFECTS_KEY shift and go to state 29

    require_key                    shift and go to state 25
    require_key_lst                shift and go to state 37

state 26

    (14) require_key -> STRIPS_KEY .

    STRIPS_KEY      reduce using rule 14 (require_key -> STRIPS_KEY .)
    EQUALITY_KEY    reduce using rule 14 (require_key -> STRIPS_KEY .)
    TYPING_KEY      reduce using rule 14 (require_key -> STRIPS_KEY .)
    PROBABILISTIC_EFFECTS_KEY reduce using rule 14 (require_key -> STRIPS_KEY .)
    RPAREN          reduce using rule 14 (require_key -> STRIPS_KEY .)


state 27

    (15) require_key -> EQUALITY_KEY .

    STRIPS_KEY      reduce using rule 15 (require_key -> EQUALITY_KEY .)
    EQUALITY_KEY    reduce using rule 15 (require_key -> EQUALITY_KEY .)
    TYPING_KEY      reduce using rule 15 (require_key -> EQUALITY_KEY .)
    PROBABILISTIC_EFFECTS_KEY reduce using rule 15 (require_key -> EQUALITY_KEY .)
    RPAREN          reduce using rule 15 (require_key -> EQUALITY_KEY .)


state 28

    (16) require_key -> TYPING_KEY .

    STRIPS_KEY      reduce using rule 16 (require_key -> TYPING_KEY .)
    EQUALITY_KEY    reduce using rule 16 (require_key -> TYPING_KEY .)
    TYPING_KEY      reduce using rule 16 (require_key -> TYPING_KEY .)
    PROBABILISTIC_EFFECTS_KEY reduce using rule 16 (require_key -> TYPING_KEY .)
    RPAREN          reduce using rule 16 (require_key -> TYPING_KEY .)


state 29

    (17) require_key -> PROBABILISTIC_EFFECTS_KEY .

    STRIPS_KEY      reduce using rule 17 (require_key -> PROBABILISTIC_EFFECTS_KEY .)
    EQUALITY_KEY    reduce using rule 17 (require_key -> PROBABILISTIC_EFFECTS_KEY .)
    TYPING_KEY      reduce using rule 17 (require_key -> PROBABILISTIC_EFFECTS_KEY .)
    PROBABILISTIC_EFFECTS_KEY reduce using rule 17 (require_key -> PROBABILISTIC_EFFECTS_KEY .)
    RPAREN          reduce using rule 17 (require_key -> PROBABILISTIC_EFFECTS_KEY .)


state 30

    (18) types_def -> LPAREN TYPES_KEY . names_lst RPAREN
    (57) names_lst -> . NAME names_lst
    (58) names_lst -> . NAME

    NAME            shift and go to state 39

    names_lst                      shift and go to state 38

state 31

    (19) predicates_def -> LPAREN . PREDICATES_KEY predicate_def_lst RPAREN

    PREDICATES_KEY  shift and go to state 40


state 32

    (3) domain -> LPAREN DEFINE_KEY domain_def require_def types_def predicates_def . action_def_lst RPAREN
    (24) action_def_lst -> . action_def action_def_lst
    (25) action_def_lst -> . action_def
    (26) action_def -> . LPAREN ACTION_KEY NAME parameters_def action_def_body RPAREN

    LPAREN          shift and go to state 41

    action_def_lst                 shift and go to state 42
    action_def                     shift and go to state 43

state 33

    (7) objects_def -> LPAREN OBJECTS_KEY . typed_constants_lst RPAREN
    (49) typed_constants_lst -> . constants_lst HYPHEN type typed_constants_lst
    (50) typed_constants_lst -> . constants_lst HYPHEN type
    (53) constants_lst -> . constant constants_lst
    (54) constants_lst -> . constant
    (60) constant -> . NAME

    NAME            shift and go to state 47

    typed_constants_lst            shift and go to state 44
    constants_lst                  shift and go to state 45
    constant                       shift and go to state 46

state 34

    (8) init_def -> LPAREN . INIT_KEY LPAREN AND_KEY ground_predicates_lst RPAREN RPAREN
    (9) init_def -> LPAREN . INIT_KEY ground_predicates_lst RPAREN

    INIT_KEY        shift and go to state 48


state 35

    (4) problem -> LPAREN DEFINE_KEY problem_def domain_def objects_def init_def . goal_def RPAREN
    (10) goal_def -> . LPAREN GOAL_KEY LPAREN AND_KEY ground_predicates_lst RPAREN RPAREN

    LPAREN          shift and go to state 49

    goal_def                       shift and go to state 50

state 36

    (11) require_def -> LPAREN REQUIREMENTS_KEY require_key_lst RPAREN .

    LPAREN          reduce using rule 11 (require_def -> LPAREN REQUIREMENTS_KEY require_key_lst RPAREN .)


state 37

    (12) require_key_lst -> require_key require_key_lst .

    RPAREN          reduce using rule 12 (require_key_lst -> require_key require_key_lst .)


state 38

    (18) types_def -> LPAREN TYPES_KEY names_lst . RPAREN

    RPAREN          shift and go to state 51


state 39

    (57) names_lst -> NAME . names_lst
    (58) names_lst -> NAME .
    (57) names_lst -> . NAME names_lst
    (58) names_lst -> . NAME

    RPAREN          reduce using rule 58 (names_lst -> NAME .)
    NAME            shift and go to state 39

    names_lst                      shift and go to state 52

state 40

    (19) predicates_def -> LPAREN PREDICATES_KEY . predicate_def_lst RPAREN
    (20) predicate_def_lst -> . predicate_def predicate_def_lst
    (21) predicate_def_lst -> . predicate_def
    (22) predicate_def -> . LPAREN NAME typed_variables_lst RPAREN
    (23) predicate_def -> . LPAREN NAME RPAREN

    LPAREN          shift and go to state 53

    predicate_def_lst              shift and go to state 54
    predicate_def                  shift and go to state 55

state 41

    (26) action_def -> LPAREN . ACTION_KEY NAME parameters_def action_def_body RPAREN

    ACTION_KEY      shift and go to state 56


state 42

    (3) domain -> LPAREN DEFINE_KEY domain_def require_def types_def predicates_def action_def_lst . RPAREN

    RPAREN          shift and go to state 57


state 43

    (24) action_def_lst -> action_def . action_def_lst
    (25) action_def_lst -> action_def .
    (24) action_def_lst -> . action_def action_def_lst
    (25) action_def_lst -> . action_def
    (26) action_def -> . LPAREN ACTION_KEY NAME parameters_def action_def_body RPAREN

    RPAREN          reduce using rule 25 (action_def_lst -> action_def .)
    LPAREN          shift and go to state 41

    action_def                     shift and go to state 43
    action_def_lst                 shift and go to state 58

state 44

    (7) objects_def -> LPAREN OBJECTS_KEY typed_constants_lst . RPAREN

    RPAREN          shift and go to state 59


state 45

    (49) typed_constants_lst -> constants_lst . HYPHEN type typed_constants_lst
    (50) typed_constants_lst -> constants_lst . HYPHEN type

    HYPHEN          shift and go to state 60


state 46

    (53) constants_lst -> constant . constants_lst
    (54) constants_lst -> constant .
    (53) constants_lst -> . constant constants_lst
    (54) constants_lst -> . constant
    (60) constant -> . NAME

    HYPHEN          reduce using rule 54 (constants_lst -> constant .)
    RPAREN          reduce using rule 54 (constants_lst -> constant .)
    NAME            shift and go to state 47

    constant                       shift and go to state 46
    constants_lst                  shift and go to state 61

state 47

    (60) constant -> NAME .

    NAME            reduce using rule 60 (constant -> NAME .)
    HYPHEN          reduce using rule 60 (constant -> NAME .)
    RPAREN          reduce using rule 60 (constant -> NAME .)


state 48

    (8) init_def -> LPAREN INIT_KEY . LPAREN AND_KEY ground_predicates_lst RPAREN RPAREN
    (9) init_def -> LPAREN INIT_KEY . ground_predicates_lst RPAREN
    (42) ground_predicates_lst -> . ground_predicate ground_predicates_lst
    (43) ground_predicates_lst -> . ground_predicate
    (47) ground_predicate -> . LPAREN NAME constants_lst RPAREN
    (48) ground_predicate -> . LPAREN NAME RPAREN

    LPAREN          shift and go to state 62

    ground_predicates_lst          shift and go to state 63
    ground_predicate               shift and go to state 64

state 49

    (10) goal_def -> LPAREN . GOAL_KEY LPAREN AND_KEY ground_predicates_lst RPAREN RPAREN

    GOAL_KEY        shift and go to state 65


state 50

    (4) problem -> LPAREN DEFINE_KEY problem_def domain_def objects_def init_def goal_def . RPAREN

    RPAREN          shift and go to state 66


state 51

    (18) types_def -> LPAREN TYPES_KEY names_lst RPAREN .

    LPAREN          reduce using rule 18 (types_def -> LPAREN TYPES_KEY names_lst RPAREN .)


state 52

    (57) names_lst -> NAME names_lst .

    RPAREN          reduce using rule 57 (names_lst -> NAME names_lst .)


state 53

    (22) predicate_def -> LPAREN . NAME typed_variables_lst RPAREN
    (23) predicate_def -> LPAREN . NAME RPAREN

    NAME            shift and go to state 67


state 54

    (19) predicates_def -> LPAREN PREDICATES_KEY predicate_def_lst . RPAREN

    RPAREN          shift and go to state 68


state 55

    (20) predicate_def_lst -> predicate_def . predicate_def_lst
    (21) predicate_def_lst -> predicate_def .
    (20) predicate_def_lst -> . predicate_def predicate_def_lst
    (21) predicate_def_lst -> . predicate_def
    (22) predicate_def -> . LPAREN NAME typed_variables_lst RPAREN
    (23) predicate_def -> . LPAREN NAME RPAREN

    RPAREN          reduce using rule 21 (predicate_def_lst -> predicate_def .)
    LPAREN          shift and go to state 53

    predicate_def                  shift and go to state 55
    predicate_def_lst              shift and go to state 69

state 56

    (26) action_def -> LPAREN ACTION_KEY . NAME parameters_def action_def_body RPAREN

    NAME            shift and go to state 70


state 57

    (3) domain -> LPAREN DEFINE_KEY domain_def require_def types_def predicates_def action_def_lst RPAREN .

    $end            reduce using rule 3 (domain -> LPAREN DEFINE_KEY domain_def require_def types_def predicates_def action_def_lst RPAREN .)


state 58

    (24) action_def_lst -> action_def action_def_lst .

    RPAREN          reduce using rule 24 (action_def_lst -> action_def action_def_lst .)


state 59

    (7) objects_def -> LPAREN OBJECTS_KEY typed_constants_lst RPAREN .

    LPAREN          reduce using rule 7 (objects_def -> LPAREN OBJECTS_KEY typed_constants_lst RPAREN .)


state 60

    (49) typed_constants_lst -> constants_lst HYPHEN . type typed_constants_lst
    (50) typed_constants_lst -> constants_lst HYPHEN . type
    (59) type -> . NAME

    NAME            shift and go to state 72

    type                           shift and go to state 71

state 61

    (53) constants_lst -> constant constants_lst .

    HYPHEN          reduce using rule 53 (constants_lst -> constant constants_lst .)
    RPAREN          reduce using rule 53 (constants_lst -> constant constants_lst .)


state 62

    (8) init_def -> LPAREN INIT_KEY LPAREN . AND_KEY ground_predicates_lst RPAREN RPAREN
    (47) ground_predicate -> LPAREN . NAME constants_lst RPAREN
    (48) ground_predicate -> LPAREN . NAME RPAREN

    AND_KEY         shift and go to state 73
    NAME            shift and go to state 74


state 63

    (9) init_def -> LPAREN INIT_KEY ground_predicates_lst . RPAREN

    RPAREN          shift and go to state 75


state 64

    (42) ground_predicates_lst -> ground_predicate . ground_predicates_lst
    (43) ground_predicates_lst -> ground_predicate .
    (42) ground_predicates_lst -> . ground_predicate ground_predicates_lst
    (43) ground_predicates_lst -> . ground_predicate
    (47) ground_predicate -> . LPAREN NAME constants_lst RPAREN
    (48) ground_predicate -> . LPAREN NAME RPAREN

    RPAREN          reduce using rule 43 (ground_predicates_lst -> ground_predicate .)
    LPAREN          shift and go to state 77

    ground_predicate               shift and go to state 64
    ground_predicates_lst          shift and go to state 76

state 65

    (10) goal_def -> LPAREN GOAL_KEY . LPAREN AND_KEY ground_predicates_lst RPAREN RPAREN

    LPAREN          shift and go to state 78


state 66

    (4) problem -> LPAREN DEFINE_KEY problem_def domain_def objects_def init_def goal_def RPAREN .

    $end            reduce using rule 4 (problem -> LPAREN DEFINE_KEY problem_def domain_def objects_def init_def goal_def RPAREN .)


state 67

    (22) predicate_def -> LPAREN NAME . typed_variables_lst RPAREN
    (23) predicate_def -> LPAREN NAME . RPAREN
    (51) typed_variables_lst -> . variables_lst HYPHEN type typed_variables_lst
    (52) typed_variables_lst -> . variables_lst HYPHEN type
    (55) variables_lst -> . VARIABLE variables_lst
    (56) variables_lst -> . VARIABLE

    RPAREN          shift and go to state 80
    VARIABLE        shift and go to state 82

    typed_variables_lst            shift and go to state 79
    variables_lst                  shift and go to state 81

state 68

    (19) predicates_def -> LPAREN PREDICATES_KEY predicate_def_lst RPAREN .

    LPAREN          reduce using rule 19 (predicates_def -> LPAREN PREDICATES_KEY predicate_def_lst RPAREN .)


state 69

    (20) predicate_def_lst -> predicate_def predicate_def_lst .

    RPAREN          reduce using rule 20 (predicate_def_lst -> predicate_def predicate_def_lst .)


state 70

    (26) action_def -> LPAREN ACTION_KEY NAME . parameters_def action_def_body RPAREN
    (27) parameters_def -> . PARAMETERS_KEY LPAREN typed_variables_lst RPAREN
    (28) parameters_def -> . PARAMETERS_KEY LPAREN RPAREN

    PARAMETERS_KEY  shift and go to state 84

    parameters_def                 shift and go to state 83

state 71

    (49) typed_constants_lst -> constants_lst HYPHEN type . typed_constants_lst
    (50) typed_constants_lst -> constants_lst HYPHEN type .
    (49) typed_constants_lst -> . constants_lst HYPHEN type typed_constants_lst
    (50) typed_constants_lst -> . constants_lst HYPHEN type
    (53) constants_lst -> . constant constants_lst
    (54) constants_lst -> . constant
    (60) constant -> . NAME

    RPAREN          reduce using rule 50 (typed_constants_lst -> constants_lst HYPHEN type .)
    NAME            shift and go to state 47

    constants_lst                  shift and go to state 45
    typed_constants_lst            shift and go to state 85
    constant                       shift and go to state 46

state 72

    (59) type -> NAME .

    NAME            reduce using rule 59 (type -> NAME .)
    RPAREN          reduce using rule 59 (type -> NAME .)
    VARIABLE        reduce using rule 59 (type -> NAME .)


state 73

    (8) init_def -> LPAREN INIT_KEY LPAREN AND_KEY . ground_predicates_lst RPAREN RPAREN
    (42) ground_predicates_lst -> . ground_predicate ground_predicates_lst
    (43) ground_predicates_lst -> . ground_predicate
    (47) ground_predicate -> . LPAREN NAME constants_lst RPAREN
    (48) ground_predicate -> . LPAREN NAME RPAREN

    LPAREN          shift and go to state 77

    ground_predicates_lst          shift and go to state 86
    ground_predicate               shift and go to state 64

state 74

    (47) ground_predicate -> LPAREN NAME . constants_lst RPAREN
    (48) ground_predicate -> LPAREN NAME . RPAREN
    (53) constants_lst -> . constant constants_lst
    (54) constants_lst -> . constant
    (60) constant -> . NAME

    RPAREN          shift and go to state 88
    NAME            shift and go to state 47

    constants_lst                  shift and go to state 87
    constant                       shift and go to state 46

state 75

    (9) init_def -> LPAREN INIT_KEY ground_predicates_lst RPAREN .

    LPAREN          reduce using rule 9 (init_def -> LPAREN INIT_KEY ground_predicates_lst RPAREN .)


state 76

    (42) ground_predicates_lst -> ground_predicate ground_predicates_lst .

    RPAREN          reduce using rule 42 (ground_predicates_lst -> ground_predicate ground_predicates_lst .)


state 77

    (47) ground_predicate -> LPAREN . NAME constants_lst RPAREN
    (48) ground_predicate -> LPAREN . NAME RPAREN

    NAME            shift and go to state 74


state 78

    (10) goal_def -> LPAREN GOAL_KEY LPAREN . AND_KEY ground_predicates_lst RPAREN RPAREN

    AND_KEY         shift and go to state 89


state 79

    (22) predicate_def -> LPAREN NAME typed_variables_lst . RPAREN

    RPAREN          shift and go to state 90


state 80

    (23) predicate_def -> LPAREN NAME RPAREN .

    LPAREN          reduce using rule 23 (predicate_def -> LPAREN NAME RPAREN .)
    RPAREN          reduce using rule 23 (predicate_def -> LPAREN NAME RPAREN .)


state 81

    (51) typed_variables_lst -> variables_lst . HYPHEN type typed_variables_lst
    (52) typed_variables_lst -> variables_lst . HYPHEN type

    HYPHEN          shift and go to state 91


state 82

    (55) variables_lst -> VARIABLE . variables_lst
    (56) variables_lst -> VARIABLE .
    (55) variables_lst -> . VARIABLE variables_lst
    (56) variables_lst -> . VARIABLE

    HYPHEN          reduce using rule 56 (variables_lst -> VARIABLE .)
    RPAREN          reduce using rule 56 (variables_lst -> VARIABLE .)
    VARIABLE        shift and go to state 82

    variables_lst                  shift and go to state 92

state 83

    (26) action_def -> LPAREN ACTION_KEY NAME parameters_def . action_def_body RPAREN
    (29) action_def_body -> . precond_def effects_def
    (30) precond_def -> . PRECONDITION_KEY LPAREN AND_KEY literals_lst RPAREN
    (31) precond_def -> . PRECONDITION_KEY literal

    PRECONDITION_KEY shift and go to state 95

    action_def_body                shift and go to state 93
    precond_def                    shift and go to state 94

state 84

    (27) parameters_def -> PARAMETERS_KEY . LPAREN typed_variables_lst RPAREN
    (28) parameters_def -> PARAMETERS_KEY . LPAREN RPAREN

    LPAREN          shift and go to state 96


state 85

    (49) typed_constants_lst -> constants_lst HYPHEN type typed_constants_lst .

    RPAREN          reduce using rule 49 (typed_constants_lst -> constants_lst HYPHEN type typed_constants_lst .)


state 86

    (8) init_def -> LPAREN INIT_KEY LPAREN AND_KEY ground_predicates_lst . RPAREN RPAREN

    RPAREN          shift and go to state 97


state 87

    (47) ground_predicate -> LPAREN NAME constants_lst . RPAREN

    RPAREN          shift and go to state 98


state 88

    (48) ground_predicate -> LPAREN NAME RPAREN .

    LPAREN          reduce using rule 48 (ground_predicate -> LPAREN NAME RPAREN .)
    RPAREN          reduce using rule 48 (ground_predicate -> LPAREN NAME RPAREN .)


state 89

    (10) goal_def -> LPAREN GOAL_KEY LPAREN AND_KEY . ground_predicates_lst RPAREN RPAREN
    (42) ground_predicates_lst -> . ground_predicate ground_predicates_lst
    (43) ground_predicates_lst -> . ground_predicate
    (47) ground_predicate -> . LPAREN NAME constants_lst RPAREN
    (48) ground_predicate -> . LPAREN NAME RPAREN

    LPAREN          shift and go to state 77

    ground_predicates_lst          shift and go to state 99
    ground_predicate               shift and go to state 64

state 90

    (22) predicate_def -> LPAREN NAME typed_variables_lst RPAREN .

    LPAREN          reduce using rule 22 (predicate_def -> LPAREN NAME typed_variables_lst RPAREN .)
    RPAREN          reduce using rule 22 (predicate_def -> LPAREN NAME typed_variables_lst RPAREN .)


state 91

    (51) typed_variables_lst -> variables_lst HYPHEN . type typed_variables_lst
    (52) typed_variables_lst -> variables_lst HYPHEN . type
    (59) type -> . NAME

    NAME            shift and go to state 72

    type                           shift and go to state 100

state 92

    (55) variables_lst -> VARIABLE variables_lst .

    HYPHEN          reduce using rule 55 (variables_lst -> VARIABLE variables_lst .)
    RPAREN          reduce using rule 55 (variables_lst -> VARIABLE variables_lst .)


state 93

    (26) action_def -> LPAREN ACTION_KEY NAME parameters_def action_def_body . RPAREN

    RPAREN          shift and go to state 101


state 94

    (29) action_def_body -> precond_def . effects_def
    (32) effects_def -> . EFFECT_KEY LPAREN AND_KEY effects_lst RPAREN
    (33) effects_def -> . EFFECT_KEY effect

    EFFECT_KEY      shift and go to state 103

    effects_def                    shift and go to state 102

state 95

    (30) precond_def -> PRECONDITION_KEY . LPAREN AND_KEY literals_lst RPAREN
    (31) precond_def -> PRECONDITION_KEY . literal
    (40) literal -> . LPAREN NOT_KEY predicate RPAREN
    (41) literal -> . predicate
    (44) predicate -> . LPAREN NAME variables_lst RPAREN
    (45) predicate -> . LPAREN EQUALS VARIABLE VARIABLE RPAREN
    (46) predicate -> . LPAREN NAME RPAREN

    LPAREN          shift and go to state 104

    literal                        shift and go to state 105
    predicate                      shift and go to state 106

state 96
